--- a/app/globals.css
+++ b/app/globals.css
@@ -62,6 +62,12 @@ body {
   }
 }
 
+html,body {
+  min-height: 100vh;
+ 
+ 
+}
+
 @layer base {
   * {
     @apply border-border;
@@ -83,4 +89,8 @@ body {
 
 .noScroll::-webkit-scrollbar {
   display: none;
+}
+
+* {
+ 
 }
